Start adding Monitor infrastructure.

--- a/src/PostBot/appsettings.json
+++ b/src/PostBot/appsettings.json
@@ -2,14 +2,15 @@
   "GitHub": {
     "Enabled": true,
     "Endpoint": "https://api.github.com",
-    "UserName": "JohnDoe",
-    "Password": "Password",
+    "PollPeriod": 5000,
+    "Token": "sometoken",
     "Organization": "AspNet"
   },
 
   "TeamCity": {
     "Enabled": true,
     "Endpoint": "http://ci.contoso.com",
+    "PollPeriod": 5000,
     "UserName": "JohnDoe",
     "Password": "Password"
   },
@@ -17,11 +18,13 @@
   "StackOverflow": {
     "Enabled": true,
     "Endpoint": "http://api.stackoverflow.com",
+    "PollPeriod": 5000,
     "Tag": "aspnet-core"
   },
 
   "AspNetForums": {
     "Enabled": true,
-    "RSS": "http://forums.asp.net/f/rss/1254"
+    "RSS": "http://forums.asp.net/f/rss/1254",
+    "PollPeriod": 5000
   }
 }
