Finish GitHub data retrieval and filtering.
- Next step is to format the data into readable objects to be posted.

--- a/src/PostBot/project.json
+++ b/src/PostBot/project.json
@@ -9,6 +9,7 @@
     "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final",
     "Microsoft.Extensions.Configuration.Binder": "1.0.0-rc2-final",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
     "Octokit.Reactive": "0.19.0"
   },
   "frameworks": {
