--- a/src/PostBot/appsettings.json
+++ b/src/PostBot/appsettings.json
@@ -1,9 +1,14 @@
 {
+
+  "WebHookUrl": "http://webhook.contoso.com",
+
   "GitHub": {
     "Enabled": true,
     "PollPeriod": 5000,
     "Token": "sometoken",
-    "Organization": "AspNet"
+    "Organization": "AspNet",
+    "IconUrl": "http://iconurl.contoso.com/githubicon.jpg",
+    "PostChannel": "testing"
   },
 
   "TeamCity": {
