Finish GitHub monitor.

--- a/src/PostBot/appsettings.json
+++ b/src/PostBot/appsettings.json
@@ -1,5 +1,5 @@
 {
-
+  "PostChannel": "testing",
   "WebHookUrl": "http://webhook.contoso.com",
 
   "GitHub": {
@@ -7,8 +7,7 @@
     "PollPeriod": 5000,
     "Token": "sometoken",
     "Organization": "AspNet",
-    "IconUrl": "http://iconurl.contoso.com/githubicon.jpg",
-    "PostChannel": "testing"
+    "IconUrl": "http://iconurl.contoso.com/githubicon.jpg"
   },
 
   "TeamCity": {
