Fix global.json and re-organize configuration settings.

--- a/src/PostBot/appsettings.json
+++ b/src/PostBot/appsettings.json
@@ -1,6 +1,8 @@
 {
-  "PostChannel": "testing",
-  "WebHookUrl": "http://webhook.contoso.com",
+  "Slack": {
+    "PostChannel": "test",
+    "WebHookUrl": "http://webhook.contoso.com"
+  },
 
   "GitHub": {
     "Enabled": true,
