Reafactored slack client slightly

--- a/src/PostBot/appsettings.json
+++ b/src/PostBot/appsettings.json
@@ -1,7 +1,10 @@
 {
   "Slack": {
     "PostChannel": "test",
-    "WebHookUrl": "http://webhook.contoso.com"
+    "WebHookUrl": "http://webhook.contoso.com",
+    "MessageBufferSize": 100,
+    "MessageDeletionToken": "sometoken",
+    "SlackApiUrl": "https://slack.com/api/"
   },
 
   "GitHub": {
