Create ResilientHttpClient and bits that consume it.

--- a/src/PostBot/appsettings.json
+++ b/src/PostBot/appsettings.json
@@ -3,7 +3,7 @@
     "PostChannel": "test",
     "WebHookUrl": "http://webhook.contoso.com",
     "MessageBufferSize": 100,
-    "MessageDeletionToken": "sometoken",
+    "ApiToken": "sometoken",
     "SlackApiUrl": "https://slack.com/api/"
   },
 
