--- a/src/PostBot/project.json
+++ b/src/PostBot/project.json
@@ -6,6 +6,7 @@
     "copyToOutput": [ "appsettings.json" ]
   },
   "dependencies": {
+    "Microsoft.AspNetCore.Http.Extensions": "1.0.0-rc2-final",
     "Microsoft.Extensions.Configuration.Json": "1.0.0-rc2-final",
     "Microsoft.Extensions.Configuration.Binder": "1.0.0-rc2-final",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0-rc2-final",
