--- a/src/PostBot/project.json
+++ b/src/PostBot/project.json
@@ -22,5 +22,6 @@
       "version": "1.0.0-preview1-final",
       "imports": "portable-net45+win8+dnxcore50"
     }
-  }
+  },
+  "excludeBuiltIn": "messagebuffer.json"
 }
