--- a/src/PostBot/project.json
+++ b/src/PostBot/project.json
@@ -3,7 +3,11 @@
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true,
-    "copyToOutput": [ "appsettings.json" ]
+    "copyToOutput": [ "appsettings.json", "install.ps1", "project.json" ],
+    "platform": "anycpu32bitpreferred"
+  },
+  "publishOptions": {
+    "include": [ "appsettings.json", "install.ps1", "project.json" ]
   },
   "dependencies": {
     "Microsoft.AspNetCore.Http.Extensions": "1.0.0-rc2-final",
@@ -15,6 +19,10 @@
   },
   "frameworks": {
     "net46": {
+      "frameworkAssemblies": {
+        "System.ServiceProcess": "4.0.0.0",
+        "System.Configuration.Install": "4.0.0.0"
+      }
     }
   },
   "tools": {
